--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.12.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "bullmq": "^5.56.8",
@@ -20,7 +21,9 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.2",
+    "openai": "^5.10.2",
     "openapi": "^1.0.1",
+    "prisma": "^6.12.0",
     "sequelize": "^6.37.7"
   }
 }
